<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">PokeScanner</string>
    <string name="title_scanner">Scanner</string>
    <string name="title_map">Map</string>
    <string name="title_collection">Collection</string>
    <string name="title_home">Home</string>
    <string name="title_settings">Settings</string>
    <string name="select_language">Select the langage</string>
    <string-array name="language_options">
        <item>English</item>
        <item>French</item>
    </string-array>
    <string name="apply_changes">Apply</string>
    <string name="capture">📷</string>
</resources>