<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_map"
        android:icon="@drawable/map_black_24dp"
        android:title="@string/title_map" />

    <item
        android:id="@+id/navigation_scanner"
        android:icon="@drawable/scanner_black_24dp"
        android:title="@string/title_scanner" />

    <item
        android:id="@+id/navigation_collection"
        android:icon="@drawable/collection_black_24dp"
        android:title="@string/title_collection" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/settings_black_24dp"
        android:title="@string/title_settings" />
</menu>