<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".ui.settings.SettingsFragment">

    <!-- Titre de la section des paramètres -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_settings"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:paddingBottom="24dp"/>

    <!-- Label pour le sélecteur de langue -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_language"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

    <!-- Sélecteur de langue -->
    <Spinner
        android:id="@+id/language_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/language_options"
        android:layout_marginTop="8dp"
        android:spinnerMode="dropdown"/>

    <Button
        android:id="@+id/apply_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/apply_changes"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="24dp"/>

</LinearLayout>
